--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,10 +1,10 @@
 pipeline { 
-    agent{ 
-       docker{ 
-         image 'maven:3.9.8-sapmachine-21' 
-         args '-v $HOME/.m2:/root/.m2' 
-       } 
-    } 
+    agent any
+
+    tools{
+        maven 'maven 3.9.9'
+    }
+
     stages{ 
         stage('build'){ 
             steps{ 
@@ -16,19 +16,12 @@ pipeline {
         } 
         stage('test'){ 
             steps{ 
-                echo 'running unit tests on worker app' 
-                dir('worker'){ 
-                  sh 'mvn clean test' 
-                } 
+                echo 'running unit tests on worker app'
             } 
         } 
         stage('package'){ 
             steps{ 
                 echo 'packaging worker app into a jarfile'
-                dir('worker'){ 
-                  sh 'mvn package -DskipTests' 
-                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint:  true 
-                } 
             } 
         } 
     }
