Update Jenkinsfile to add test and package

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -17,18 +17,24 @@ pipeline {
         stage('test'){ 
             steps{ 
                 echo 'running unit tests on worker app'
+                dir('worker'){
+                  sh 'mvn clean test'
+                }
             } 
         } 
         stage('package'){ 
             steps{ 
                 echo 'packaging worker app into a jarfile'
+                dir('worker'){
+                  sh 'mvn package -DskipTests'
+                  archiveArtifacts artifacts: '**/target/*.jar', fingerprint:  true
+                }
             } 
         } 
     }
     post{ 
         always{ 
-            echo 'the job is complete' 
-
+            echo 'the job is complete'
     }
   }
 }
