Add per stage agents

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,16 +1,16 @@
 pipeline { 
-    agent{
-        docker{
-            image 'maven:3.9.9-sapmachine-21'
-            args '-v $HOME/.m2:/root/.m2'
-        }
-    }
-
+    agent none
 
     stages{ 
         stage('build'){
             when{
                 changeset "**/worker/**"
+            }
+            agent{
+                docker{
+                    image 'maven:3.9.9-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
             }
             steps{ 
                 echo 'building worker app' 
@@ -23,6 +23,12 @@ pipeline {
             when{
                 changeset "**/worker/**"
             }
+            agent{
+                docker{
+                    image 'maven:3.9.9-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
+            }
             steps{ 
                 echo 'running unit tests on worker app'
                 dir('worker'){
@@ -34,6 +40,12 @@ pipeline {
             when{
                 branch 'master'
                 changeset "**/worker/**"
+            }
+            agent{
+                docker{
+                    image 'maven:3.9.9-sapmachine-21'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
             }
             steps{ 
                 echo 'packaging worker app into a jarfile'
