--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,14 +1,16 @@
 pipeline { 
     agent none
     stages{ 
-        stage('build'){ 
+        stage('build'){
+            when{
+                changeset "**/vote/**"
+            }
             agent{
                 docker{
                     image 'python:3.11-slim'
                     args '--user root'
                     }
                     }
-
             steps{ 
                 echo 'Compiling vote app.' 
                 dir('vote'){
@@ -19,7 +21,9 @@ pipeline {
             } 
         } 
         stage('test'){ 
-           
+           when{
+               changeset "**/vote/**"
+           }
             agent {
                 docker{
                     image 'python:3.11-slim'
@@ -32,21 +36,23 @@ pipeline {
                    
                         sh "pip install -r requirements.txt"
                         sh 'nosetests -v'
-                        
-                        
                 } 
             } 
         } 
 
       stage('docker-package'){
+          when{
+              branch 'master'
+              changeset "**/vote/**"
+          }
           agent any
          
           steps{
-            echo 'Packaging wvoteorker app with docker'
+            echo 'Packaging vote app with docker'
             script{
               docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                   // ./vote is the path to the Dockerfile that Jenkins will find from the Github repo
-                  def voteImage = docker.build("okapetanios/vote:v${env.BUILD_ID}", "./vote")
+                  def voteImage = docker.build("montemin/vote:v${env.BUILD_ID}", "./vote")
                   voteImage.push()
                   voteImage.push("${env.BRANCH_NAME}")
                   voteImage.push("latest")
@@ -54,14 +60,12 @@ pipeline {
             }
           }
       }
-
     } 
     post {
         always{
             echo 'Pipeline for vote is complete'
         }
     }
-
 } 
 
 
