--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ networks:
 services:
   vote:
     image: montemin/vote:latest
+    build: ./vote
     ports:
       - 5000:80
     depends_on:
@@ -17,6 +18,7 @@ services:
 
   result:
     image: montemin/result:latest
+    build: ./result
     ports:
       - 5001:4000
     depends_on:
@@ -26,6 +28,7 @@ services:
 
   worker:
     image: montemin/worker:latest
+    build: ./worker
     depends_on:
       - redis
       - db
